--- a/style.css
+++ b/style.css
@@ -17,7 +17,12 @@ body {
     height: 70px;
     box-sizing: border-box;
 }
-.content {
+
+.container {
+    background-color: #fafafa;
+}
+
+.quizzes-list {
     margin: 75px auto 75px;
     max-width: 1050px;
 }
@@ -115,12 +120,160 @@ body {
     line-height: 22px;
 }
 
+/* tela do quizz */
+.quizz-details {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quizz-top {
+    width: 100%;
+    position: relative;
+}
+
+.quizz-top .overlay {
+    justify-content: center;
+    align-items: center;
+    border-radius: 0;
+    background: rgba(0, 0, 0, 0.57);
+}
+
+.quizz-top img {
+    height: 226px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.quizz-top h2 {
+    font-size: 38px;
+    margin: 0 10px;
+    text-align: center;
+    color: #fff;
+}
+
+.questions {
+    width: 758px;
+}
+
+.quizz-details .question {
+    padding: 28px 35px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 48px;
+}
+
+.question-top {
+    width: 100%;
+    height: 138px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 22px;
+    color: #fff;
+    background-color: #434CA0;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.answers {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.answer {
+    max-width: 48.5%;
+    width: 48.5%;
+    margin-bottom: 18px;
+}
+
+.answer img {
+    width: 100%;
+    height: 175px;
+    object-fit: cover;
+}
+
+.answer h3 {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 8px;
+}
+
+.answer.disabled {
+    opacity: 30%;
+}
+
+.answer.incorrect h3 {
+    color: #FF4B4B;
+}
+
+.answer.correct h3 {
+    color: #009C22;
+}
+
+.result .question-top {
+    height: 100px;
+    background-color: #EC362D;
+}
+
+.result-details {
+    display: flex;
+    justify-content: space-between;
+}
+
+.result-details img {
+    width: 364px;
+    height: 272px;
+    object-fit: cover;
+}
+
+.result-details p {
+    margin-left: 22px;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 25px;
+    color: #484848;
+}
+
+.end-buttons {
+    display: flex;
+    flex-direction: column;
+    margin-top: 58px 0 86px 0;
+}
+
+.end-buttons button {
+    width: 260px;
+    height: 52px;
+    font-size: 20px;
+    border: none;
+}
+
+.end-buttons button:hover {
+    cursor: pointer;
+}
+
+.end-buttons .primary {
+    background-color: #EC362D;
+    border-radius: 15px;
+    color: #FFF5F4;
+    margin-bottom: 16px;
+}
+
+.end-buttons .secondary {
+    background-color: inherit;
+    color: #818181;
+}
+
 .hidden {
     display: none;
 }
 
 @media (max-width: 1100px) {
-    .content {
+    .quizzes-list {
         margin: 30px auto 30px;
         padding: 0 17px;
     }
@@ -135,4 +288,38 @@ body {
     .create-quizz {
         margin-bottom: 35px;
     }
+
+    /* tela do quizz */
+    .quizz-top h2 {
+        font-size: 18px;
+    }
+    .answer {
+        width: 100%;
+    }
+    .questions {
+        width: 100%;
+    }
+    .quizz-details .question {
+        margin-top: 28px;
+        padding: 18px;
+    }
+    .question-top {
+        font-size: 18px;
+    }
+    .answer h3 {
+        font-size: 14px;
+    }
+    .result-details {
+        flex-direction: column;
+        justify-content: initial;
+    }
+    .result-details img {
+        width: 100%;
+    }
+    .result-details p {
+        margin: 10px 0;
+    }
+    .end-buttons {
+        margin: 34px 0 20px 0;
+    }   
 }
