--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ ion-icon:hover {
     margin: 0 10px;
     text-align: center;
     color: #fff;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .questions {
@@ -193,7 +193,7 @@ ion-icon:hover {
     margin-bottom: 20px;
     text-align: center;
     overflow-wrap: break-word;
-    word-break: break-all;
+    word-break: break-word;
     padding: 15px;
 }
 
@@ -205,7 +205,7 @@ ion-icon:hover {
 }
 
 .answers h3 {
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .answer {
@@ -269,7 +269,7 @@ ion-icon:hover {
     font-size: 18px;
     line-height: 25px;
     color: #484848;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .end-buttons {
