--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ ion-icon:hover {
     position: relative;
 }
 
-.quizz:hover {
+.quizz .overlay:hover {
     cursor: pointer;
 }
 
@@ -431,6 +431,34 @@ button.back-home {
 }
 
 /* FIM CRIAÇÃO DO QUIZZ */
+
+/* BOTÕES DE EDITAR E DELETAR QUIZZES */
+
+.delete-edit {
+    position: absolute;
+    top: 10px;
+    right: 0;
+    padding: 15px 10px;
+    background-color: #EC362D;
+    border-radius: 10px 0px 0px 11px;
+    display: flex;
+    flex-direction: column;
+}
+
+.delete-edit img:first-child {
+    width: auto;
+    height: 18px;
+    margin-bottom: 15px;
+}
+
+.delete-edit img:last-child {
+    width: 18px;
+    height: 20px;
+}
+
+.delete-edit img:hover {
+    cursor: pointer;
+}
 
 @media (max-width: 1100px) {
     .quizzes-list {
