--- a/style.css
+++ b/style.css
@@ -433,6 +433,30 @@ button.back-home {
 
 /* FIM CRIAÇÃO DO QUIZZ */
 
+.loading-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.loading-container img {
+    width: 76px;
+    height: 76px;
+}
+
+.loading-container h3 {
+    font-size: 24px;
+    margin: 24px 0;
+    color: #EC362D;
+    text-align: center;
+}
+
 @media (max-width: 1100px) {
     .quizzes-list {
         margin: 30px auto 30px;
